--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -76,6 +76,23 @@
         }
     }
 
+    h2 {
+        font-size: 24px;
+        margin: 64px 0 24px;
+        font-family: 'Poppins', sans-serif;
+
+    }
+
+    p {
+        font-size: 14px;
+        color: #737380;
+        margin-top: 16px;
+
+        a {
+            color: #e599f9;
+        }
+    }
+
     .create-room {
         margin-top: 64px;
         height: 50px;
