feat: create a useeffect to display the room and question information on screen

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -77,7 +77,7 @@
                         font-size: 14px;
                     }
                 }
-                 span {
+                 > span {
                      font-size: 14px;
                      color: #737380;
                      font-weight: 500;
