--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -5,60 +5,78 @@
   padding: 24px;
 
   & + .question {
-    margin: 8px;
+    margin-top: 8px;
   }
-}
 
-p {
-  color: #29292e;
-}
+  &.highlighted {
+    background: #f4f0ff;
+    border: 1px solid #835afd;
 
-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 24px;
-  transition: filter 0.2s;
+    footer .user-info span {
+      color: #29292e;
+    }
+  }
 
-  .user-info {
+  &.answered {
+    background: #dbdcdd;
+  }
+
+  p {
+    color: #29292e;
+  }
+
+  footer {
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    margin-top: 24px;
 
-    img {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-    }
-
-    span {
-      margin-left: 8px;
-      color: #737380;
-      font-size: 14px;
-    }
-  }
-
-  button {
-    border: 0;
-    background: transparent;
-    cursor: pointer;
-
-    &.like-button {
+    .user-info {
       display: flex;
-      align-items: flex-end;
-      color: #737380;
-      gap: 8px;
+      align-items: center;
 
-      &.liked {
-        color: #835afd;
+      img {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+      }
 
-        svg path {
-          stroke: #835afd;
-        }
+      span {
+        margin-left: 8px;
+        color: #737380;
+        font-size: 14px;
       }
     }
 
-    &:hover {
-      filter: brightness(0.7);
+    > div {
+      display: flex;
+      gap: 16px;
+    }
+
+    button {
+      border: 0;
+      background: transparent;
+      cursor: pointer;
+      transition: filter 0.2s;
+
+      &.like-button {
+        display: flex;
+        align-items: flex-end;
+        color: #737380;
+        gap: 8px;
+
+        &.liked {
+          color: #835afd;
+
+          svg path {
+            stroke: #835afd;
+          }
+        }
+      }
+
+      &:hover {
+        filter: brightness(0.7);
+      }
     }
   }
 }
